--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
-    <!-- BGM audio yang diputar terus-menerus -->
+    <!-- BGM audio dari file lokal bgm.mp3 -->
     <audio id="bgmAudio" autoplay loop>
-        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mp3">
+        <source src="bgm.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
     </audio>
 
     <script>
@@ -127,4 +128,4 @@
                 document.querySelector("h1").style.display = "none";
 
                 // Putar video YouTube setelah countdown selesai
-                const youtubePlayer =
+                const youtubePlayer = document.getElementById("youtubePlayerRamadha
