--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
             from {background-position: 0 0;}
             to {background-position: -10000px 5000px;}
         }
+        audio {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            z-index: -1;
+        }
         .share-button {
             position: fixed;
             bottom: 20px;
@@ -77,9 +83,13 @@
     <p id="countdownRamadhan"></p>
     <img class="crescent" id="crescentImageRamadhan" src="https://upload.wikimedia.org/wikipedia/commons/0/09/Star_and_Crescent.svg" alt="Bulan Sabit">
     <div class="youtubePlayer" id="youtubePlayerRamadhan">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/XLunTSk5Z-c?autoplay=1&loop=1&playlist=XLunTSk5Z-c" 
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/XLunTSk5Z-c?autoplay=1" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
+
+    <audio autoplay loop>
+        <source src="https://youtu.be/XLunTSk5Z-c?si=6FyW31EkJ4v1ZETW" type="audio/mp3">
+    </audio>
 
     <script>
         // Set waktu target Ramadhan (misal 2025-03-23 00:00)
@@ -90,12 +100,6 @@
         if (now > targetTime) {
             targetTime.setFullYear(targetTime.getFullYear() + 1);
         }
-
-        // Putar video YouTube secara otomatis saat halaman dimuat
-        window.onload = function() {
-            const youtubePlayer = document.getElementById("youtubePlayerRamadhan");
-            youtubePlayer.style.display = "block"; // Tampilkan video
-        };
 
         function updateCountdown() {
             const currentTime = new Date().getTime();
@@ -120,6 +124,10 @@
                 // Sembunyikan teks
                 document.getElementById("countdownRamadhan").style.display = "none";
                 document.querySelector("h1").style.display = "none";
+
+                // Putar video YouTube setelah countdown selesai
+                const youtubePlayer = document.getElementById("youtubePlayerRamadhan");
+                youtubePlayer.style.display = "block";
             }
         }
 
